# athlete-injury-risk-detection

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  release-please-config.json  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  ml.yml  release.yml
dashboard/: app.py
deploy/huggingface/: DEPLOY.md  Dockerfile  README.md
notebooks/: 01_eda.ipynb
reports/: benchmark_real.json  benchmark_synthetic.json  benchmark_synthetic_tuned.json  metrics_real.json  metrics_synthetic.json
src/data/: download.py  generate_synthetic.py  load_dataset.py
src/injury_risk/: __init__.py  cli.py  config.py  inference.py  release.py  service.py
src/injury_risk/api/: client.py  main.py  schemas.py
src/injury_risk/data/: datasets.py  download.py  generate_synthetic.py  load_dataset.py
src/injury_risk/features/: engineering.py  risk_factors.py
src/injury_risk/models/: baselines.py  benchmark.py  candidates.py  evaluate.py  smoke.py  splits.py  threshold.py  train.py  tune.py
src/injury_risk/visualization/: shap_plots.py
src/models/: benchmark.py  train.py  tune.py
src/visualization/: shap_plots.py
tests/: test_api.py  test_cli.py  test_datasets.py  test_engineering.py  test_generate_synthetic.py  test_inference.py  test_models.py  test_no_leakage.py  test_release.py  test_risk_factors.py  test_service.py  test_smoke.py  test_splits.py  test_threshold.py
