[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "injury-risk"
version = "0.1.0"
description = "Athlete injury risk detection with ACWR, XGBoost and SHAP explainability"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Amayyas Aouadene" }]
keywords = ["machine-learning", "sports-analytics", "shap", "explainable-ai", "xgboost"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
]

dependencies = [
    # Data & compute
    "pandas>=2.2,<3.0",
    "numpy>=1.26,<3.0",
    "scipy>=1.11",
    "pyarrow>=15.0",            # parquet backend
    "openpyxl>=3.1,<4.0",       # .xlsx datasets (SIRP-600)
    # Machine learning
    "scikit-learn>=1.5,<2.0",
    "xgboost>=2.1,<3.0",
    "imbalanced-learn>=0.14,<0.15",
    # Explainability
    "shap>=0.46,<0.50",
    # Visualisation
    "matplotlib>=3.9,<4.0",
    "seaborn>=0.13,<0.14",
    # Model persistence
    "joblib>=1.4,<2.0",
    # CLI
    "typer>=0.12",
    # HTTP client for the API (used by the dashboard when it talks to the service)
    "httpx>=0.27",
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.40,<2.0"]
api = ["fastapi>=0.115", "uvicorn[standard]>=0.32", "pydantic>=2.9"]
kaggle = ["kaggle>=1.6,<2.0"]
notebooks = ["nbformat>=5.10", "nbconvert>=7.16", "ipykernel>=6.29"]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-cov>=5.0",
    "mypy>=1.13",
    "black>=24.10",
    "ruff>=0.8",
    "pip-tools>=7.4",   # `make lock`
    # The other extras are listed out rather than self-referenced as
    # `injury-risk[dashboard,...]`: pip-compile resolves a self-referencing extra to
    # a local file:// path and writes *that* into the lock, which then only installs
    # on the machine that generated it.
    "streamlit>=1.40,<2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "kaggle>=1.6,<2.0",
    "nbformat>=5.10",
    "nbconvert>=7.16",
    "ipykernel>=6.29",
]

[project.scripts]
injury-risk = "injury_risk.cli:app"

[project.urls]
Repository = "https://github.com/Amayyas/athlete-injury-risk-detection"
Issues = "https://github.com/Amayyas/athlete-injury-risk-detection/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/injury_risk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# The coverage floor is a ratchet set just under the project's *current* real level,
# so it can only go up. It went 15 -> 50 when the suite was broadened (#10). The
# uncovered remainder is mostly CLI entry points and plotting code.
addopts = "-q --cov=injury_risk --cov-report=term-missing --cov-fail-under=50"
markers = [
    "slow: runs the full pipeline (seconds each) — the model-quality guard",
]

[tool.coverage.run]
source = ["injury_risk"]

[tool.mypy]
python_version = "3.12"
files = ["src/injury_risk", "dashboard", "tests"]
# The scientific stack (pandas, sklearn, xgboost, shap, streamlit) ships partial
# or absent stubs; type-checking our own code is the goal, not theirs.
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
# Exploration notebooks use legitimate idioms (per-cell imports, `;` to hide
# output) that ruff would flag incorrectly.
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # line length handled by black

[tool.ruff.lint.per-file-ignores]
# typer's whole design is to declare options as call defaults; B008 is a false
# positive here, not a bug.
"src/injury_risk/cli.py" = ["B008"]
